Remove fast-double-parser-8, add matrix tests for 8, 11, and 17